// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:TabsTransferPicker 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
      data-amis-theme="cxd"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
            role="page-body"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
              data-role="container"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
              >
                <h3
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
              >
                <form
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                    data-amis-name="a"
                    data-role="form-item"
                  >
                    <label
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            选人
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__TabsTransferControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox __AMIS_COMPONENT_CLASS_PREFIX__TransferPicker is-clickable is-group"
                        tabindex="-1"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox-value"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                              data-index="0"
                            >
                              <span>
                                诸葛亮
                              </span>
                            </span>
                            <a
                              data-index="0"
                            >
                              <icon-mock
                                class="icon icon-close"
                                icon="close"
                              />
                            </a>
                          </div>
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TransferPicker-icon"
                          >
                            <icon-mock
                              class="icon icon-pencil"
                              icon="pencil"
                            />
                          </span>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                        />
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
                >
                  <button
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:TabsTransferPicker: dialog open 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
      data-amis-theme="cxd"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
            role="page-body"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
              data-role="container"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
              >
                <h3
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
              >
                <form
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                    data-amis-name="a"
                    data-role="form-item"
                  >
                    <label
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
                    >
                      <span>
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            选人
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__TabsTransferControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox __AMIS_COMPONENT_CLASS_PREFIX__TransferPicker is-active is-clickable is-group"
                        tabindex="-1"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                          >
                            请选择
                          </span>
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__TransferPicker-icon"
                          >
                            <icon-mock
                              class="icon icon-pencil"
                              icon="pencil"
                            />
                          </span>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                        />
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
                >
                  <button
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Modal __AMIS_COMPONENT_CLASS_PREFIX__Modal--md __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-header"
        locale="zh-CN"
        theme="cxd"
      >
        <a
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </a>
        请选择
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-body"
        theme="cxd"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Transfer __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Transfer-select"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--line __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer-tabs"
              data-role="container"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
                  >
                    <ul
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
                      role="tablist"
                    >
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                      >
                        <a
                          title="成员"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                          >
                            成员
                          </span>
                        </a>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                      >
                        <a
                          title="角色"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                          >
                            角色
                          </span>
                        </a>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                      >
                        <a
                          title="部门"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                          >
                            部门
                          </span>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
              >
                <div
                  class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Tree __AMIS_COMPONENT_CLASS_PREFIX__Transfer-checkboxes"
                  >
                    <ul
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-list"
                    >
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item"
                        style="--Tree-depth: 0;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                          >
                            <icon-mock
                              class="icon icon-down-arrow-bold"
                              icon="down-arrow-bold"
                            />
                          </div>
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm checked __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default--checked"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="法师"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      法师
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel is-checked"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm checked __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default--checked"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="诸葛亮"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      诸葛亮
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      zhugeliang@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item"
                        style="--Tree-depth: 0;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                          >
                            <icon-mock
                              class="icon icon-down-arrow-bold"
                              icon="down-arrow-bold"
                            />
                          </div>
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="战士"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      战士
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="曹操"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      曹操
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      caocao@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="钟无艳"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      钟无艳
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      zhongwuyan@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item"
                        style="--Tree-depth: 0;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                          >
                            <icon-mock
                              class="icon icon-down-arrow-bold"
                              icon="down-arrow-bold"
                            />
                          </div>
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="打野"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      打野
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="李白"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      李白
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      libai@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="韩信"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      韩信
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      hanxin@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="云中君"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      云中君
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      yunzhongjun@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection __AMIS_COMPONENT_CLASS_PREFIX__Transfer-checkboxes"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-item"
                    >
                      <label
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                        data-role="checkbox"
                      >
                        <input
                          type="checkbox"
                        />
                        <i>
                          <div
                            class="checkbox-icon icon"
                          />
                        </i>
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-itemLabel"
                      >
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 1
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-item"
                    >
                      <label
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                        data-role="checkbox"
                      >
                        <input
                          type="checkbox"
                        />
                        <i>
                          <div
                            class="checkbox-icon icon"
                          />
                        </i>
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-itemLabel"
                      >
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 2
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-item"
                    >
                      <label
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                        data-role="checkbox"
                      >
                        <input
                          type="checkbox"
                        />
                        <i>
                          <div
                            class="checkbox-icon icon"
                          />
                        </i>
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-itemLabel"
                      >
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 3
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-item"
                    >
                      <label
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                        data-role="checkbox"
                      >
                        <input
                          type="checkbox"
                        />
                        <i>
                          <div
                            class="checkbox-icon icon"
                          />
                        </i>
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__GroupedSelection-itemLabel"
                      >
                        <span
                          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 4
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane __AMIS_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Tree __AMIS_COMPONENT_CLASS_PREFIX__Transfer-checkboxes"
                  >
                    <ul
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-list"
                    >
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item"
                        style="--Tree-depth: 0;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                          >
                            <icon-mock
                              class="icon icon-down-arrow-bold"
                              icon="down-arrow-bold"
                            />
                          </div>
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="总部"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      总部
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                          >
                            <icon-mock
                              class="icon icon-down-arrow-bold"
                              icon="down-arrow-bold"
                            />
                          </div>
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="部门 1"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 1
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 2;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="部门 4"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 4
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 2;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="部门 5"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 5
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="部门 2"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 2
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                      <li
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item __AMIS_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                        style="--Tree-depth: 1;"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                        >
                          <span
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                          />
                          <label
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                            data-role="checkbox"
                          >
                            <input
                              type="checkbox"
                            />
                            <i>
                              <div
                                class="checkbox-icon icon"
                              />
                            </i>
                            <span
                              class=""
                            />
                          </label>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-itemText"
                              title="部门 3"
                            >
                              <span
                                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 3
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </span>
                            <div
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                            />
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Transfer-mid"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Transfer-result"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Transfer-title"
            >
              <span>
                已选项
              </span>
              <a
                class="__AMIS_COMPONENT_CLASS_PREFIX__Transfer-clearAll"
              >
                清空
              </a>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Selections __AMIS_COMPONENT_CLASS_PREFIX__Transfer-value"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Selections-items"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Selections-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Selections-label"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                    >
                      <span>
                        诸葛亮(zhugeliang)
                      </span>
                    </span>
                  </label>
                  <a
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Selections-delBtn"
                    data-index="0"
                  >
                    <icon-mock
                      class="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-footer"
        theme="cxd"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          取消
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          确认
        </button>
      </div>
    </div>
  </div>
</body>
`;
